export const snapshot = {};

snapshot[`Project Comment Add Command - By UUID With Body Flag 1`] = `
stdout:
"✓ Comment added to project 6f1c3b8a-2d4e-4a5b-9c7d-1e2f3a4b5c6d
https://linear.app/team/project/mobile-abc123/activity#comment-uuid-1
"
stderr:
""
`;

snapshot[`Project Comment Add Command - By Slug With Reply To Flag 1`] = `
stdout:
"✓ Comment added to project mobile-abc123
https://linear.app/team/project/mobile-abc123/activity#comment-uuid-2
"
stderr:
""
`;

snapshot[`Project Comment Add Command - Help 1`] = `
stdout:
"
Usage: add <project>

Description:

  Add a comment or reply to a project's discussion (by ID, slug, or name)         
                                                                                  
  Linear Markdown: a plain Linear URL creates a mention; \`@name\`, \`@[Name](id)\`,  
  and \`[Name](url)\` do not. Get a person's URL from the \`url\` field of            
  \`linear team members <TEAM> --json\`, or an issue's from \`linear issue url <ID>\`.
  Run \`linear markdown\` for collapsible sections and the full reference.          

Options:

  -h, --help                             - Show this help.                                                   
  -b, --body                <text>       - Comment body text                                                 
  --body-file               <path>       - Read comment body from a file (preferred for markdown content)    
  -p, --parent, --reply-to  <commentId>  - Reply to a top-level comment by ID (the reply joins that thread)  

"
stderr:
""
`;
